Replace user role enum with RBAC
